fix: fixed the leaderboard being too wide in leaderboard-page

--- a/src/pages/leaderboard-page/leaderboard-page.css
+++ b/src/pages/leaderboard-page/leaderboard-page.css
@@ -36,7 +36,7 @@
     list-style: none;
     padding: 0;
     margin: -10rem auto 2rem;
-    max-width: 1600px;
+    max-width: 1300px;
 
     max-height: 1600px;
     overflow-y: auto;
